wk_taa_taaqa/src/objects/ATA_AssignmentType_Map__c.object
<CustomObject>
    <description>This holds the map of distinct assignment types to Account Field API Names and the values that drive the 
assignment: This is used in conjunction with the ATA_Rule object and the ATA_Role_Assignment object to obtain the list of Account Team Roles for a given combination of fields values that uniquely determine the Role Assignment.</description>
    <fields>
        <fullName>Assignment_Type__c</fullName>
        <label>Assignment Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FieldSet__c</fullName>
        <label>FieldSet</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Value__c</fullName>
        <label>Field Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule_Type__c</fullName>
        <label>Rule Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>ATA AssignmentType Map</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Assignment_Type__c</columns>
        <columns>FieldSet__c</columns>
        <columns>Field_API_Name__c</columns>
        <columns>Field_Value__c</columns>
        <columns>Rule_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ATA-TypeMap-{0000}</displayFormat>
        <label>ATA AssignmentType Map Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ATA AssignmentType Map</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>